--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
+              <!-- Footer -->
+        <footer id="footer">
+
+           <ul class="icons">
+              <li><a href="http://weibo.com/rubbishpicker" class="icon circle fa-weibo"><span class="label">Weibo</span></a></li>
+           </ul>
+           <ul class="copyright">
+               <li>&copy; JK.PENG</li>
+           </ul>
+        </footer>
     </div>
-
     
-
   </body>
 </html>
